Revision history for Test-Ping

{{$NEXT}}

0.204     2019-10-31 12:18:43+02:00 Asia/Jerusalem

        - Some cleanups.

0.203     2016-03-13 22:18:34+01:00 Europe/Amsterdam
        - Ugh. $VERSION wasn't added and the indexing failed.
        - Fix the LICENSING.
        - Fix the versioning.
        - Update the PODs automatically via dzil.

0.202   13.03.16
        - Previous release had no Changes entry. Bah.

0.201   13.03.16
        - Dzilify.

0.200   13.03.16
        - fixed typo in is_admin_user() definition which was breaking tests
          on Windows (Undefined subroutine &main::is_admin_user called at
          t\03-icmp.t line 2)
        - fixes RT #108683; ftp.geocities.com unavailable broke t/08-ping_tcp.t
          and added more current/reliable domains to test against
        - Net::Ping, in v2.40, changed to using HiRes by default, fixed
          t/09-ping_hires.t to conform to said change. Bumped prereq ver of
          Net::Ping to 2.41, to ensure future test compatibility
        - fixed issue in create_ping_object_not_ok(), where it didn't appear
          that it could possibly do the right thing
        - fixed issue in create_ping_object_ok() where the else() statement
          would never have been triggered
        - skip test "Failed test 'IP should still be reachable' at
          t\13-service.t line 133." until the issue can be found/rectified
          (problem only exists in Windows)
        - fixed RELEASE_TESTING test files so they simply skip if the required
          modules aren't installed (critic.t, meta.t and pod.t)
        - removed t/minimumversion.t, it wasn't being used anyhow
        - added configure_requires directive in Build.PL
        - added t/16-ties.t, tests all Ties
        - added t/17-ping_obj_not_ok.t
        - added t/18-ping_obj_ok.t
        - major updates to MAKEFILE.SKIP
        - added t/18-ping_obj_ok.t
        - test coverage now 96.6% from 86.16%

0.17    06.06.10