@@ -2,9 +2,9 @@ name    = Test-Ping
 author  = Sawyer X
 license = MIT
 copyright_holder = Sawyer X
-copyright_year   = 2019
+copyright_year   = 2020
 
-version = 0.204
+version = 0.210
 
 [NextRelease]
 filename = Changes
