@@ -1,7 +1,8 @@
 package Test::Ping::Ties::PROTO;
+# ABSTRACT: Protocol Tie variable to Test::Ping
+
 use strict;
 use warnings;
-# ABSTRACT: Protocol Tie variable to Test::Ping
 
 use Net::Ping;
 use Test::Ping;
