@@ -1,7 +1,8 @@
 package Test::Ping::Ties::SERVICE_CHECK;
+# ABSTRACT: Service Check Tie variable to Test::Ping
+
 use strict;
 use warnings;
-# ABSTRACT: Service Check Tie variable to Test::Ping
 
 use Net::Ping;
 use Test::Ping;
